--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -5815,18 +5815,17 @@
                     const displayName = c.projectName || '현장명 미지정';
                     const subInfo = (c.clientName || '') + (c.clientName && c.clientPhone ? ' / ' : '') + (c.clientPhone || '');
                     const lockIcon = c.isLocked ? '🔒' : '';
-                    const creatorInfo = c.createdBy ? `<div class="customer-item-creator">📝 ${c.createdBy}</div>` : '';
+                    const creatorInfo = c.createdBy ? ` / <span style="color:#ff9500; font-weight:600;">${c.createdBy}</span>` : '';
 
                     return `
                 <div class="customer-item ${c.customerId === currentCustomerId ? 'active' : ''}"
                     onclick="selectCustomer('${c.customerId}')">
                     <div class="customer-item-header">
-                        <span class="customer-item-id">${lockIcon}${c.customerId}</span>
+                        <span class="customer-item-id">${lockIcon}${c.customerId}${creatorInfo}</span>
                         <span class="status-badge ${c.status}">${statusText}</span>
                     </div>
                     <div class="customer-item-name" style="font-weight: 700;">${displayName}</div>
                     <div class="customer-item-info">${subInfo}</div>
-                    ${creatorInfo}
                 </div>`;
                 }).join('');
             }
@@ -6078,14 +6077,30 @@
             // FUNDAMENTAL LOCK CHECK
             if (idx >= 0) {
                 const original = customers[idx];
-                // If it was locked, BLOCK save operations
-                if (original.isLocked) {
+
+                // If it was locked, BLOCK save operations (except for main admin)
+                if (original.isLocked && !isMainAdmin()) {
                     showToast('잠금 상태에서는 저장할 수 없습니다.', 'error');
                     return;
                 }
 
+                // 작성자 권한 체크: 작성자 또는 메인관리자만 수정 가능
+                if (original.createdBy && original.createdBy !== currentAdmin?.id && !isMainAdmin()) {
+                    showToast(`수정 권한이 없습니다. (작성자: ${original.createdBy})`, 'error');
+                    return;
+                }
+
+                // 첫 저장 시 작성자 할당 (createdBy가 없는 경우)
+                if (!original.createdBy && currentAdmin) {
+                    currentData.createdBy = currentAdmin.id;
+                }
+
                 customers[idx] = { ...currentData };
             } else {
+                // 새 고객: 작성자 할당
+                if (!currentData.createdBy && currentAdmin) {
+                    currentData.createdBy = currentAdmin.id;
+                }
                 customers.push({ ...currentData });
             }
             localStorage.setItem('dz_customers', JSON.stringify(customers));
@@ -8226,9 +8241,12 @@
     </div>
 
     <!-- 샘플 견적서 모달 -->
-    <div id="sampleEstimateModal" class="modal" style="display: none;">
-        <div class="modal-backdrop" onclick="closeSampleEstimateModal()"></div>
-        <div class="modal-content" style="max-width: 500px; width: 90%;">
+    <div id="sampleEstimateModal" class="modal"
+        style="display: none; position: fixed; top: 0; left: 0; right: 0; bottom: 0; z-index: 10000; align-items: center; justify-content: center;">
+        <div class="modal-backdrop" onclick="closeSampleEstimateModal()"
+            style="position: fixed; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0,0.5);"></div>
+        <div class="modal-content"
+            style="max-width: 500px; width: 90%; position: relative; z-index: 10001; background: white; border-radius: 16px; box-shadow: 0 20px 60px rgba(0,0,0,0.3);">
             <div class="modal-header"
                 style="background: linear-gradient(135deg, #ff9500, #ff6600); color: white; padding: 20px; border-radius: 16px 16px 0 0;">
                 <h3 style="margin: 0; font-size: 18px; font-weight: 700;">📋 샘플 견적서</h3>
