--- a/adminwonpro.html
+++ b/adminwonpro.html
@@ -1762,7 +1762,7 @@
         .estimate-table {
             width: 100%;
             border-collapse: collapse;
-            table-layout: fixed;
+            table-layout: auto;
             font-size: var(--font-size-md);
             margin-bottom: 8px;
         }
@@ -1782,8 +1782,7 @@
             border: 1px solid #e8e8ed;
             text-align: center;
             vertical-align: middle;
-            overflow: hidden;
-            text-overflow: ellipsis;
+            white-space: nowrap;
         }
 
         .estimate-table select {
@@ -6272,16 +6271,16 @@
                 </div>
                 <table class="estimate-table">
                     <colgroup>
-                        <col style="width:22px;"><!-- No-->
-                        <col style="width:45px;" class="col-div"><!-- 구분 (인쇄시 숨김) -->
-                        <col style="width:auto;"><!-- 품명 (나머지 공간) -->
-                        <col style="width:160px;"><!-- 상세내용 -->
-                        <col style="width:30px;"><!-- 단위 -->
-                        <col style="width:40px;"><!-- 수량 -->
-                        <col style="width:70px;"><!-- 단가 -->
-                        <col style="width:80px;"><!-- 금액 -->
-                        <col style="width:60px;"><!-- 비고 -->
-                        <col style="width:20px;" class="no-print"><!-- 삭제 -->
+                        <col><!-- No-->
+                        <col class="col-div"><!-- 구분 (인쇄시 숨김) -->
+                        <col><!-- 품명 -->
+                        <col><!-- 상세내용 -->
+                        <col><!-- 단위 -->
+                        <col><!-- 수량 -->
+                        <col><!-- 단가 -->
+                        <col><!-- 금액 -->
+                        <col><!-- 비고 -->
+                        <col class="no-print"><!-- 삭제 -->
                     </colgroup>
                     <thead>
                         <tr>
